--- a/Jaca Web/Tree/tree.html
+++ b/Jaca Web/Tree/tree.html
@@ -5,7 +5,7 @@
 		<link href="d3_custom.css" rel="stylesheet"/>
 		<link href="../styles.css" rel="stylesheet"/>
 		<script src="d3_custom.js" type="text/javascript"></script>
-		<script src="../d3.v3.min.js" type="text/javascript"></script>
+		<script src="../lib/d3.v3.js" type="text/javascript"></script>
 		<script type="text/javascript">
 			document.addEventListener('DOMContentLoaded', showTree);
 		</script>
